Fix clearSearch button is not showing in filter toolbar
https://github.com/openpsa/grid.js/issues/76

--- a/less/search.less
+++ b/less/search.less
@@ -19,6 +19,8 @@
 	    -moz-box-sizing: border-box;
 	    -webkit-box-sizing: border-box;
 	    box-sizing: border-box;
+	}
+	& > select{
 	    width: 100%;
 	}
     }
